Enforce fixed spacing between detail names and values

--- a/css/details.css
+++ b/css/details.css
@@ -16,7 +16,7 @@ th {
 }
 
 td {
-	text-align: right;
+	padding-left: 1em;
 }
 
 summary {
